actualizacion enlaces y footer

--- a/catalog-beds.html
+++ b/catalog-beds.html
@@ -23,8 +23,8 @@
 				</div>
 				<div class="navbar-links" style="top: -260px;">
 					<a href="index.html">Inicio</a>
-					<a href="catalog.html">Catalogo</a>
-					<a href="contact.html">Contacto</a>
+					<a href="index.html#catalogId">Catalogo</a>
+					<a href="#footerId">Contacto</a>
 				</div><!--/.nav-collapse -->
 			</div>
 		</div>
@@ -121,7 +121,7 @@
 			</div>
 		</div>
 
-		<footer>
+		<footer id="footerId">
 			<div class="container container-footer">
 
 				<div class="row row-footer">
