--- a/catalog-bath.html
+++ b/catalog-bath.html
@@ -26,8 +26,8 @@
 				</div>
 				<div class="navbar-links" style="top: -260px;">
 					<a href="index.html">Inicio</a>
-					<a href="catalog.html">Catalogo</a>
-					<a href="contact.html">Contacto</a>
+					<a href="index.html#catalogId">Catalogo</a>
+					<a href="#footerId">Contacto</a>
 				</div><!--/.nav-collapse -->
 			</div>
 		</div>
@@ -119,7 +119,7 @@
 			</div>
 		</div>
 
-		<footer>
+		<footer id="footerId">
 			<div class="container container-footer">
 
 				<div class="row row-footer">
