--- a/catalog-bath.html
+++ b/catalog-bath.html
@@ -121,30 +121,41 @@
 
 		<footer id="footerId">
 			<div class="container container-footer">
-
+	
 				<div class="row row-footer">
 					
-					<div class="footer-section">
-						<div class="inner-footer-section">
-							<h2>Contacto</h2>
-							<div class="widget-body">
-								<p>311 503 7098<br>
-									<a href="mailto:#">some.email@somewhere.com</a><br>
-									<br>
-									Manzana 82 Casa 14 Piso 2 Barrio Modelia 1, Ibagué Tolima, Colombia
-								</p>	
+					<div class="footer-section footer-contact">
+						<h2>Contacto</h2>
+						<div class="widget-body">
+							<div class="footer-contact-data" style="margin-left: 3px;">
+								<img src="assets/image/icons/iconon-whatsapp-white-50x50.png" alt="logo whatsapp blanco" width="20" height="20">
+								<h3>311 503 7098</h3>
+							</div>
+							<div class="footer-contact-data" style="margin-left: 3px;">
+								<img src="assets/image/icons/icono-correo-blanco-50x50.png" alt="logo whatsapp blanco" width="20" height="20">
+								<a href="mailto:#">mueblesenciso@gmail.com</a><br>
+							</div>
+							<div class="footer-contact-data">
+								<img src="assets/image/icons/icono-localizacion1-negro-50x50.png" alt="logo whatsapp blanco" width="25" height="25">
+								<p>Manzana 82 Casa 14 Piso 2 Barrio Modelia 1</p>
+							</div>
+							<div class="footer-contact-data">
+								<img src="assets/image/icons/icono-mapa-colombia-borde-blanco-50x50.png" alt="logo whatsapp blanco" width="25" height="25">
+								<p>Ibagué - Tolima - Colombia</p>
 							</div>
 						</div>
 					</div>
-
-					<div class="footer-section">
-						<div class="inner-footer-section">
-							<h2>Text widget</h2>
-							<div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Excepturi, dolores, quibusdam architecto voluptatem amet fugiat nesciunt placeat provident cumque accusamus itaque voluptate modi quidem dolore optio velit hic iusto vero praesentium repellat commodi ad id expedita cupiditate repellendus possimus unde?</p>
-							</div>
+	
+					<div class="footer-section footer-right">
+						<div class="footer-contact-data">
+							<img src="assets/image/main/logoME_blanco_sinfondo.png" alt="logo Muebles Enciso" >
+							<h2>Experiencia y Calidad</h2>
+						</div>
+						<div class="footer-contact-data" style="text-align: justify;">
+							<p>Muebles Enciso es una empresa querida por los ibaguereños con una amplia trayectoria debido a la confianza que todos nuestros clientes han depositado en nosotros durante estos años, seguiremos mejorando nuestras habilidades y proyectos para responder a esa confianza como sabemos hacerlo, con Experiencia y Calidad. No habriamos llegado hasta aquí de no ser por ustedes.</p>
 						</div>
 					</div>
+	
 				</div> <!-- /row of widgets -->
 			</div>
 			<div class="container footer-copyright">
