--- a/index.html
+++ b/index.html
@@ -46,8 +46,9 @@
 	<!-- saludo de bienvenida -->
 	<div class="container welcome-container">
 		<h2 class="welcome">Bienvenidos</h2>
-		<p>Con más de 20 años de experiencia en carpintería y ebanistería, proporcionamos productos de calidad para hogares y empresas.</p>
+		<p>En Muebles Enciso creamos este espacio digital para que puedas encontrar información util sobre nosotros y nuestros proyectos.</p>
 	</div>
+	<div class="divider"></div>
 	<!-- slider de las imagenes -->
 	<div class="container">
 		<h2 class="gallery-slider-tittle">ALGUNOS DE NUESTROS TRABAJOS</h2>
@@ -205,28 +206,32 @@
 				<div class="footer-section footer-contact">
 					<h2>Contacto</h2>
 					<div class="widget-body">
-						<div class="footer-contact-data">
+						<div class="footer-contact-data" style="margin-left: 3px;">
 							<img src="assets/image/icons/iconon-whatsapp-white-50x50.png" alt="logo whatsapp blanco" width="20" height="20">
 							<h3>311 503 7098</h3>
 						</div>
-						<div class="footer-contact-data">
+						<div class="footer-contact-data" style="margin-left: 3px;">
 							<img src="assets/image/icons/icono-correo-blanco-50x50.png" alt="logo whatsapp blanco" width="20" height="20">
 							<a href="mailto:#">mueblesenciso@gmail.com</a><br>
 						</div>
 						<div class="footer-contact-data">
 							<img src="assets/image/icons/icono-localizacion1-negro-50x50.png" alt="logo whatsapp blanco" width="25" height="25">
 							<p>Manzana 82 Casa 14 Piso 2 Barrio Modelia 1</p>
-							<p>Ibagué Tolima - Colombia</p>
+						</div>
+						<div class="footer-contact-data">
+							<img src="assets/image/icons/icono-mapa-colombia-borde-blanco-50x50.png" alt="logo whatsapp blanco" width="25" height="25">
+							<p>Ibagué - Tolima - Colombia</p>
 						</div>
 					</div>
 				</div>
 
 				<div class="footer-section footer-right">
-					<div>
-						<img src="assets/image/main/logoMEgrabado_mareda.webp" alt="logo Muebles Enciso" width="120" height="120">
-					</div>
-					<div class="footer-text">
+					<div class="footer-contact-data">
+						<img src="assets/image/main/logoME_blanco_sinfondo.png" alt="logo Muebles Enciso" >
 						<h2>Experiencia y Calidad</h2>
+					</div>
+					<div class="footer-contact-data" style="text-align: justify;">
+						<p>Muebles Enciso es una empresa querida por los ibaguereños con una amplia trayectoria debido a la confianza que todos nuestros clientes han depositado en nosotros durante estos años, seguiremos mejorando nuestras habilidades y proyectos para responder a esa confianza como sabemos hacerlo, con Experiencia y Calidad. No habriamos llegado hasta aquí de no ser por ustedes.</p>
 					</div>
 				</div>
 
