actualizacion boton cerrar ventana modal catalogo

--- a/catalog-tv.html
+++ b/catalog-tv.html
@@ -125,14 +125,12 @@
 			<div class="container-modal">				 
 				<div class="modal" id="modal1">
 				    <div class="modal-dialog">
-				    	<header class="modal-header">
-				    		...
-				    		<button class="close-modal" aria-label="close modal" onclick="closeModal('modal1')">✕</button>
-				    	</header>
+				    	<button class="close-modal" aria-label="close modal" onclick="closeModal('modal1')">
+							<img src="assets/image/icons/equis.png" alt="imagen cerrar" width="35" height="35">
+						</button>
 				    	<section class="modal-content">
 				    		<img id="img-modal" src="">
 				    	</section>
-				    	<footer class="modal-footer">...</footer>
 					</div>
 				</div>
 			</div>
